@@ -1,3 +1,7 @@
+Fri May 17 2002 David Reveman (c99drn@cs.umu.se)
+
+   Added configurable titlebar buttons
+
 Thu May 10 2002 David Reveman (c99drn@cs.umu.se)
 
    *** Waimea v0.3.1 release ***
